Optimize sending sys info to the feedback app

This change optimizes the processing of sys info before sending it
to the feedback app. It shaves off 10ms from that time on peach_pit.

BUG=681279

Review-Url: https://codereview.chromium.org/2635473003
Cr-Commit-Position: refs/heads/master@{#444113}

Former-commit-id: 701e43f0444b6bd25f7a58acb5ebe87138ffec04